--- a/src/main/webapp/requests/mwapi.xhtml
+++ b/src/main/webapp/requests/mwapi.xhtml
@@ -7,6 +7,9 @@
         <f:viewParam name="username" value="#{patientInvestigationController.username}" ></f:viewParam>
         <f:viewParam name="password" value="#{patientInvestigationController.password}" ></f:viewParam>
         <f:viewParam name="machine" value="#{patientInvestigationController.machine}" ></f:viewParam>
+        <f:viewParam name="shift" value="#{patientInvestigationController.shift}" ></f:viewParam>
+        <f:viewParam name="shift1" value="#{patientInvestigationController.shift1}" ></f:viewParam>
+        <f:viewParam name="shift2" value="#{patientInvestigationController.shift2}" ></f:viewParam>
         <f:viewParam name="msg" value="#{patientInvestigationController.msg}" ></f:viewParam>
         <f:viewAction action="#{patientInvestigationController.msgFromMiddleware()}" ></f:viewAction>
     </f:metadata>
