Report FOrmat for Microbiology was change to fix issues temporarily

--- a/src/main/webapp/lab/patient_report.xhtml
+++ b/src/main/webapp/lab/patient_report.xhtml
@@ -341,7 +341,7 @@
                                 <p:printer target="divPrint" ></p:printer>
                             </p:commandButton>
                             <p:commandButton  styleClass="nonPrintBlock"  ajax="false" value="PDF" actionListener="#{patientReportController.pdfPatientReport()}" 
-                                             rendered="#{(patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission) and false}" />
+                                              rendered="#{(patientReportController.currentPatientReport.approved or userPreferenceController.userPreference.canPrintWithoutPermission) and false}" />
                         </div>
 
 
@@ -399,26 +399,27 @@
                                 <div id="divReportM"   class="labReport" >
                                     <ez:common_report commonReportFormat="#{patientReportController.currentPatientReport.transInvestigation.reportFormat}"
                                                       patientReport="#{patientReportController.currentPatientReport}"/>
-                                    <div style="display: inline-block; position: absolute; top: 28%; width: 97%; left: 1%; text-align: center; font-family:Cambria, Georgia, serif; font-size: 16px; height: 70%;" >
+                                    <div style="position: absolute; top: 28%; width: 97%; left: 1%; text-align: center; font-family:Cambria, Georgia, serif; font-size: 16px; height: 70%; vertical-align: top;" >
                                         <div id="ixName" >
                                             <h:outputLabel value="#{patientReportController.currentPatientReport.patientInvestigation.investigation.printName}" 
                                                            style="font-weight: bold;font-size: 18px!important; "/>
                                         </div>
-                                        <div id="labelsAndValues" style="left:5%; width: 90%; display: inline-block;" >
-                                            <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
-                                                <h:panelGroup rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop lt 50 }" >
-                                                    <div style="vertical-align: top; text-align: left;  padding-top: 3%; padding-bottom: 3%;">
-                                                        <div style="float: left;width: 5%; " ></div>
-                                                        <div style=" float: left; text-align: left; width: 20%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
-                                                            <h:outputLabel value="#{prv.investigationItem.name}"   escape="false"/>
-                                                        </div>
-                                                        <div style="float: left; width: 5%; " ></div>
-                                                        <div style=" text-align: left; float:left;width: 60%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
-                                                            <h:outputLabel value="#{fn:replace(prv.lobValue,'\\n','&lt;br/&gt;')}"   escape="false"   />
-                                                        </div>
-                                                    </div>
-                                                </h:panelGroup>
-                                            </ui:repeat>
+                                        <div id="labelsAndValues" style="left:5%; width: 90%; display: inline-block; vertical-align: top; " >
+                                            <div style="vertical-align: top; width: 100%; padding: 1px;margin: auto;display: inline-block;">
+                                                <ui:repeat  value="#{patientReportController.currentPatientReport.patientReportItemValues}" var="prv" >
+                                                    <h:panelGroup style="display: inline-block; clear: left; float: left; width: 100%; vertical-align: top;" layout="block"  rendered="#{prv.investigationItem.ixItemType eq 'Value' and prv.investigationItem.ixItemValueType eq 'Memo' and prv.investigationItem.retired eq false and prv.lobValue ne '' and prv.lobValue ne null and prv.investigationItem.riTop lt 50 }" >
+                                                            <div style="display: inline-block; float: left; width: 1%; clear: left; " ></div>
+                                                            <div style="display: inline-block; top: 0px; float: left; width: 20%; text-align: left; padding-top: 2%; padding-bottom: 1%; ">
+                                                                <h:outputLabel value="#{prv.investigationItem.name}"   escape="false"/>
+                                                            </div>
+                                                            <div style="display: inline-block; float: left; width: 3%; " ></div>
+                                                            <div style="display: inline-block; text-align: left; float:left; width: 60%; padding-top: 2%; padding-bottom: 1%; ">
+                                                                <h:outputLabel value="#{fn:replace(prv.lobValue,'\\n','&lt;br/&gt;')}"   escape="false"   />
+                                                            </div>
+                                                    </h:panelGroup>
+                                                </ui:repeat>
+                                            </div>
+
                                             <div style="vertical-align: top; text-align: left;  padding-top: 3%; padding-bottom: 2%; clear: left;">
                                                 <h:outputLabel value="Antibiotic Sensitivity Test" 
                                                                rendered="#{patientReportController.currentPatientReport.transHasAbst}"
@@ -428,12 +429,12 @@
                                                         var="prv" >
                                                 <h:panelGroup 
                                                     rendered="#{prv.investigationItem.ixItemType eq 'Antibiotic' and prv.investigationItem.retired eq false and prv.strValue ne '' and prv.strValue ne null  }" >
-                                                    <div style="float: left;width: 5%; " ></div>
-                                                    <div style=" float: left; text-align: left; width: 20%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
+                                                    <div style="float: left;width: 5%; clear: left;" ></div>
+                                                    <div style=" float: left; text-align: left; width: 40%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
                                                         <h:outputLabel value="#{prv.investigationItem.name}"  escape="false" />
                                                     </div>
                                                     <div style="float: left;width: 5%;  " ></div>
-                                                    <div style=" text-align: left; float:left;width: 60%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
+                                                    <div style=" text-align: left; float:left;width: 40%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
                                                         <h:outputLabel value="#{prv.strValue}" escape="false"  />
                                                     </div>
 
@@ -452,7 +453,7 @@
                                                 </h:panelGroup>
                                             </ui:repeat>
                                         </div>
-                                        <div style="clear: left;">
+                                        <div style="clear: left;padding-top: 2%;">
                                             <h:outputLabel value="--- End of Report ---" style="font-size: 14px; font-weight: bold; "></h:outputLabel>
                                         </div>
                                     </div>
@@ -461,7 +462,7 @@
 
                         </h:panelGroup>
 
-                        
+
 
 
                     </h:form>
