--- a/src/main/webapp/lab/patient_report.xhtml
+++ b/src/main/webapp/lab/patient_report.xhtml
@@ -435,7 +435,7 @@
                                                     </div>
                                                     <div style="float: left;width: 5%;  " ></div>
                                                     <div style=" text-align: left; float:left;width: 40%;padding-left: 1px; padding-right: 1px; padding-top: 5px; vertical-align: top;">
-                                                        <h:outputLabel value="#{prv.strValue}" escape="false"  />
+                                                        <h:outputLabel value="#{prv.strValue}" escape="false" style="text-transform: uppercase;" />
                                                     </div>
 
                                                 </h:panelGroup>
