--- a/src/main/webapp/reportLab/lab_summeries_index.xhtml
+++ b/src/main/webapp/reportLab/lab_summeries_index.xhtml
@@ -16,6 +16,8 @@
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Investigation List" action="investigation_counts"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Bill List" action="/reportLab/bill_list"/> 
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Patient List" action="turn_over_time_bills"/> 
+                                    <p:commandButton styleClass="linkButton" ajax="false" value="Sample List" action="/lab/patient_sample_list"/> 
+                                    
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Average Turn Around Time" action="turn_over_time"/> 
                                     <p:commandButton styleClass="linkButton" ajax="false" value="Bill-vice turn-around time" action="turn_over_time_bills"/> 
                                     <p:commandButton actionListener="#{investigationMonthSummeryOwnControllerSession.clearList}" styleClass="linkButton" ajax="false" value="By Billed Institution" action="report_lab_by_billed_institution"/>
