--- a/src/main/webapp/inward/inward_bill_intrim.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim.xhtml
@@ -94,6 +94,7 @@
                                                 pattern="dd/MMM/yyyy - hh:mm:ss a" >                               
                                         <f:ajax execute="@this" render="sum tvPt tot" event="dateSelect" listener="#{bhtSummeryController.checkDate}" />
                                     </p:calendar> 
+                                    <p:commandButton ajax="false" rendered="false" style="float: right;" value="Add Vat" action="#{bhtSummeryController.addVat}" onclick="onSubmitButton();" />
                                     <p:commandButton ajax="false" style="float: right;" value="Discharge" action="#{bhtSummeryController.discharge}" onclick="onSubmitButton();" />
                                     <p:commandButton ajax="false" style="float: right;" value="Discharge Cancel" action="#{bhtSummeryController.dischargeCancel}" onclick="onSubmitButton();" />
                                 </h:panelGrid>
