--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -32,6 +32,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="5) All Cashier Summary Without Professional" action="report_cashier_summery_all_total_only_without_pro.xhtml" actionListener="#{cashierReportController.recreteModal}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="6) Bill List" action="/opd_search_user_bills.xhtml"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="7) Cashier Service Count Report" action="report_cashier_item_count_by_user.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="8) Bill Type Summery" action="/reportIncome/bill_type_summery.xhtml"/>
                                     </h:panelGrid>                     
                                 </p:panel>
                                 <p:panel header="4) Handover Reports" style="width: 400px; height: auto" collapsed="true" toggleable="true">
